--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "react-native-dotenv": "^0.2.0"
   }
 }
