--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-navigation": "^3.0.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
+    "redux-persist": "4.6.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
